--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css"/>
+  <script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
   test text
