--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css"/>
-  <script type="text/javascript" src="popup.js"></script>
+  <script type="text/javascript" src="background.js"></script>
 </head>
 <body>
   test text
