anchor tage in popup not working, unsure why.

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,11 @@
   <script type="text/javascript" src="background.js"></script>
 </head>
 <body>
-  test text
+  <h1> 
+    This Site is Seashells Enabled 
+  </h1>
+  <p>
+    Earn cash back by visiting us <a href="https://shopseashells.com/brands?q%5Bname_cont%5D="> here</a>
+  </p>
 </body>
 </html>
