--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     This Site is Seashells Enabled 
   </h1>
   <p>
-    Earn cash back by visiting us <a href="https://shopseashells.com/brands?q%5Bname_cont%5D="> here</a>
+    Earn cash back by visiting us <a href="https://shopseashells.com/brands?q%5Bname_cont%5D=" target="_newtab"> here</a>
   </p>
 </body>
 </html>
